--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= link_to "Pets", pets_path %>
+    <%= link_to "People", people_path %>
     <%= yield %>
   </body>
 </html>
